--- a/SwissDrawTests/SwissDrawTests.csproj
+++ b/SwissDrawTests/SwissDrawTests.csproj
@@ -56,8 +56,10 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="MatchTests2.cs" />
     <Compile Include="MatchTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScoreTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
